--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
+app.iml
 
 # Folder config file
 Desktop.ini
@@ -42,4 +43,18 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-.idea
+# User-specific stuff:
+ .idea/workspace.xml
+ .idea/tasks.xml
+ .idea/dictionaries
+
+# Sensitive or high-churn files:
+ .idea/dataSources.ids
+ .idea/dataSources.xml
+ .idea/sqlDataSources.xml
+ .idea/dynamic.xml
+ .idea/uiDesigner.xml
+
+# Gradle:
+ .idea/gradle.xml
+ .idea/libraries
