--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ Temporary Items
 # Gradle:
  .idea/gradle.xml
  .idea/libraries
+MyLocationApp/.idea/modules.xml
+MyLocationApp/.idea/dictionaries/Alexandra.xml
+MyLocationApp/.idea/misc.xml
+MyLocationApp/.idea/modules.xml
